--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,9 +22,9 @@ body {
   line-height: 1.77778;
   font-weight: bold;
   text-decoration: none;
-  border: none;
+  border: none; #76001D
   list-style: none;
-  color: #76001D;
+  color: #0000;
   margin: 0;
 }
 
