--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,7 +148,7 @@ button {
 }
 
 .card {
-  background-color: #fff;
+  background-color: #372f38;
   margin-bottom: 20px;
   height: 100%;
 }
@@ -275,7 +275,7 @@ button {
   line-height: 1.75;
   text-align: center;
   padding: 9px 20px;
-  background-color: #d9e021;
+  background-color: #45516d;
   margin: 0 -20px 20px -20px;
 }
 
